@@ -27,6 +27,7 @@ Changes:
 - map: avoid 1<<31 in constants
 - option: remove struct HXoptcb.arg0
 - option: remove struct HXoptcb.match_{ln,sh} by .flags
+- option: let HX_getopt return code indicate system failure states
 - string: unline HX_strdup, HX_strlcat, HX_strlcpy, HX_strnlcat
 
 
